# liney-win

./: .gitignore  ALT_PLAN_SELFBUILT.md  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  PRODUCT_STRATEGY_2026.md  README.md  README.zh-CN.md  RENDERING.md  RESEARCH.md  ROADMAP.md  STABILITY_PLAN.md  TECH_PLAN.md  TERMINAL_LANDSCAPE.md  TODO.md  config.example.json  dl_out.txt
.github/workflows/: ci.yml  client-compatibility.yml  release.yml
docs/: CLIENT_CERTIFICATION.md
packaging/: AppxManifest.xml  liney-win.nsi
packaging/winget/: everettjf.liney-win.installer.yaml  everettjf.liney-win.locale.en-US.yaml  everettjf.liney-win.yaml
res/: app.manifest  resource.rc
src/: main.cpp
src/app/: Layout.h  Pane.h  SettingsDialog.cpp  SettingsDialog.h  Tab.cpp  Tab.h  Window.cpp  Window.h  WindowAi.cpp  WindowFind.cpp  WindowInput.cpp  WindowInternal.h  WindowMouse.cpp  WindowPalette.cpp  WindowRender.cpp  WindowSession.cpp
src/cli/: main.cpp
src/core/: Ai.cpp  Ai.h  CommandHistory.cpp  CommandHistory.h  Config.cpp  Config.h  KeyBinding.cpp  KeyBinding.h  RenderSignal.h  ShellProfiles.cpp  ShellProfiles.h  Shutdown.cpp  Shutdown.h  SshProfiles.cpp  SshProfiles.h  TerminalSession.cpp  TerminalSession.h  Themes.h  Update.cpp  Update.h  WindowGeometry.cpp  WindowGeometry.h
src/pty/: ConPty.cpp  ConPty.h
src/render/: Cell.h  D2DRenderer.cpp  D2DRenderer.h  IRenderer.h
src/util/: AccessibilityProvider.cpp  AccessibilityProvider.h  Authenticode.cpp  Authenticode.h  Base64.cpp  Base64.h  Diagnostics.cpp  Diagnostics.h  Dialogs.cpp  Dialogs.h  Http.cpp  Http.h  InputBox.cpp  InputBox.h  Json.cpp  Json.h  Process.cpp  Process.h
src/vt/: ModeScanner.h  Notification.h  OscParser.cpp  OscParser.h  Terminal.cpp  Terminal.h  VTEmulator.cpp  VTEmulator.h  VTEmulatorInternal.h  VTParser.cpp
src/workspace/: GitStatusParser.cpp  GitStatusParser.h  Workspace.cpp  Workspace.h
tests/: CMakeLists.txt  test_main.cpp
tools/: accessibility-smoke.ps1  build.ps1  client-certification.ps1  compatibility-smoke.ps1  configure-signing.ps1  display-smoke.ps1  gen-assets.ps1  gen-icon.ps1  installer-smoke.ps1  make-installer.ps1  make-msix.ps1  make-portable.ps1  perf-smoke.ps1  power-resume-smoke.ps1  smoke-test.ps1  soak-smoke.ps1  stability-soak.ps1
